desenv_tests/test-assets/struct/failure/prefix_empty_string.rs
use desenv::Desenv;

#[derive(Desenv)]
#[desenv(prefix = "")]
struct Config {
    field: String
}

fn main(){}